Updated gamerunner helper and removed asset hashes from downloader